remove logos on small screens

--- a/contact.html
+++ b/contact.html
@@ -16,18 +16,17 @@
 </head>
 
 <body>
-
   <!-- Top Bar -->
   <div class="container-fluid">
     <nav class="navbar navbar-expand-sm flex-nowrap align-items-start shadow mb-2 rounded">
-      <img class="logo-img" src="img/OCCSLogo.png">
+      <img class="d-none d-md-block logo-img" src="img/OCCSLogo.png">
       <div class="d-flex flex-column container">
         <div class="d-sm-flex d-block flex-nowrap">
           <p class="navbar-brand title" href="#">渥太华首都中文学校</p>
         </div>
         <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
-      <img class="logo-img" src="img/OCSBLogo.png">
+      <img class="d-none d-md-block logo-img" src="img/OCSBLogo.png">
     </nav>
   </div>
 
@@ -90,7 +89,8 @@
                 <p class="card-text"><strong>学校地址：</strong>710 BROADVIEW, OTTAWA</p>
                 <p class="card-text"><strong>电话：</strong>613-293-2129 (周六9:30-12:30 九月至六月</p>
                 <hr>
-                <p class="card-text"><strong>Site Administrator: </strong>Vitus So, B.A., B.S.S. , M.A., B. Ed., Principal Qualification
+                <p class="card-text"><strong>Site Administrator: </strong>Vitus So, B.A., B.S.S. , M.A., B. Ed.,
+                  Principal Qualification
                 </p>
                 <p class="card-text"><strong>Address: </strong>710 BROADVIEW, OTTAWA</p>
                 <p class="card-text"><strong>Phone: </strong>613-293-2129 Saturday (9:30am-12:30pm Sept. to June)</p>
