--- a/newsletter.html
+++ b/newsletter.html
@@ -19,14 +19,14 @@
   <!-- Top Bar -->
   <div class="container-fluid">
     <nav class="navbar navbar-expand-sm flex-nowrap align-items-start shadow mb-2 rounded">
-      <img class="logo-img" src="img/OCCSLogo.png">
+      <img class="d-none d-md-block logo-img" src="img/OCCSLogo.png">
       <div class="d-flex flex-column container">
         <div class="d-sm-flex d-block flex-nowrap">
           <p class="navbar-brand title" href="#">渥太华首都中文学校</p>
         </div>
         <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
-      <img class="logo-img" src="img/OCSBLogo.png">
+      <img class="d-none d-md-block logo-img" src="img/OCSBLogo.png">
     </nav>
   </div>
 
