--- a/photos.html
+++ b/photos.html
@@ -16,16 +16,19 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm flex-nowrap align-items-start shadow mb-2 rounded">
-    <img class="logo-img" src="img/OCCSLogo.png">
-    <div class="d-flex flex-column container">
-      <div class="d-sm-flex d-block flex-nowrap">
-        <p class="navbar-brand title" href="#">渥太华首都中文学校</p>
+  <!-- Top Bar -->
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm flex-nowrap align-items-start shadow mb-2 rounded">
+      <img class="d-none d-md-block logo-img" src="img/OCCSLogo.png">
+      <div class="d-flex flex-column container">
+        <div class="d-sm-flex d-block flex-nowrap">
+          <p class="navbar-brand title" href="#">渥太华首都中文学校</p>
+        </div>
+        <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
-      <p class="sub-title">Ottawa Capital Chinese School</p>
-    </div>
-    <img class="logo-img" src="img/OCSBLogo.png">
-  </nav>
+      <img class="d-none d-md-block logo-img" src="img/OCSBLogo.png">
+    </nav>
+  </div>
   <!-- <nav class="navbar navbar-light bg-light justify-content-center">
     <img src="img/OCCSLogo.png"></img>
     <div class="navbar-brand mb-0 h1">Ottawa Capital Chinese School</div>
@@ -86,8 +89,11 @@
   <div class="container">
 
     <div class="flex-column">
-      <a class="d-flex justify-content-start" href="index.html"><button class="btn mr-4"><i class="fa fa-arrow-left"></i> Back</button></a>
-      <div class="d-flex justify-content-center"><h2 class="font-weight-light mt-2">Photo Gallery</h2></div>
+      <a class="d-flex justify-content-start" href="index.html"><button class="btn mr-4"><i
+            class="fa fa-arrow-left"></i> Back</button></a>
+      <div class="d-flex justify-content-center">
+        <h2 class="font-weight-light mt-2">Photo Gallery</h2>
+      </div>
     </div>
 
 
