--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         <div class="card mb-3">
           <div class="row no-gutters">
             <div class="col-md-5 align-self-center img-thumbnail">
-              <img src="img/school-large.jpg" class="card-img" alt="...">
+              <img src="img/school-entrance.jpg" class="card-img" alt="...">
             </div>
             <div class="col-md-7">
               <div class="card-body">
