--- a/newsletter.html
+++ b/newsletter.html
@@ -77,24 +77,26 @@
       <div class="col-lg-9 col-md-8">
         <div class="jumbotron">
           <h4 class="text-center">Important Information for Parents and Students</h4>
-          <p class="text-center blockquote-footer">Updated December 8, 2017</p>
+          <p class="text-center blockquote-footer">December 7, 2019</p>
           <hr>
           <ol>
-            <li>As the winter season has arrived, we would like to remind you about the traffic regulation at the
-              Chinese School. In order to avoid congestion and accident in the Parking Lot, please Do Not Park in the
-              Fire Lane Zone, violator will be ticketed from the City of Ottawa.</li>
+            <li>
+              As the winter season has arrived, we would like to remind you about the traffic regulation
+              at the Chinese School. In order to avoid congestion and accident in the Parking Lot, please
+              <b>Do Not Park in the Fire Lane Zone or no parking area, violator will be ticketed from the City of Ottawa.</b>
+            </li>
+            <li>Afternoon Interest class registration for next term will start on December 7, 2019 in room 230.</li>
             <li>There will be no school on</li>
             <ul>
-              <li>Christmas Holiday: Dec 23, 30 and Jan 6, 2018. Classes will resume on Jan 13, 2018.</li>
-              <li>Family Day weekend: February 17, 2018</li>
+              <li>Christmas Holiday: Dec 21, 28 and Jan 4, 2020.  Classes will resume on Jan 11, 2020.</li>
+              <li>Family Day weekend:  Feb 15, 2020</li>
             </ul>
-            <li>The annual Chinese New Year Carnival will be held on February 3, 2018 in the Cafeteria. There will be
-              games, prizes, treats, Lion dance and performances to celebrate the “Year of the Dog”. Please wear your
-              Chinese outfit and arrive at 10:00 a.m. for this fun event. </li>
-            <li>Afternoon Interest class registration for next term will start on December 9, 2017 in room 230. </li>
-            <li>There will be no afternoon interest classes on February 3, 2018 due to Chinese New Year Celebration.
+            <li>
+                The annual <b>Chinese New Year Carnival</b> will be held on January 18, 2020 in the Cafeteria.
+                There will 	be games, prizes, treats, Lion dance and performances to celebrate the “Year of the Mouse”. 
+                <b>Please wear your Chinese outfit and arrive at 10:00 a.m. for this wonderful event.</b>
             </li>
-            <li>Please have children bring in their indoor shoes for school during the Winter months.</li>
+            <li>Afternoon Interest class registration for next term will start on January 25, 2020.</li>
             <li>School Address: Notre Dame High School, 710 Broadview Ave.<br>Phone Number for Saturday (Capital Chinese
               School): 613-293-2129</li>
           </ol>
@@ -106,20 +108,15 @@
           <h4 class="text-center">给家长和学生的重要信息</h4>
           <hr>
           <ol>
-            <li>冬季来临，提醒家长请注意中文学校的交通规章,避免停车场交通堵塞和事故，禁止把车辆停泊在火警区内,避免被拖车；</li>
-            <li>2017年12月23日和30日，2018年1月6日没有中文课，1月13日返校；</li>
-            <ul>
-              <li>家庭日周末：2018年2月17日；</li>
-            </ul>
-            <li>
-              春节游戏活动于2018年2月3日在咖啡厅举行，届时将有游戏/奖品/小食品，还有倍受同学和家长们欢迎的龙舞/狮子舞以及表演等，让我们来共同欢庆狗年的到来！请在上午10点来参加有趣的活动。</li>
-            <li>下学期的兴趣课开始注册：2017年12月9日 于230教室；</li>
-            <li>由于春节游戏活动2018年2月3日，没有兴趣课；</li>
-            <li>请让您的孩子穿室内鞋在校活动；</li>
-            <li>首都中文学校地址：Notre Dame High School, 710 Broadview Ave.</li>
-            <ul>
-              <li>星期六电话号码（首都中文学校）：613-293-2129</li>
-            </ul>
+            <li>冬季来临，提醒家长请注意中文学校的交通规章, 避免停车场交通堵塞和事故，禁止把车辆停泊在火警区内, 避免被拖车。</li>
+            <li>下学期的兴趣课开始注册：2019年12月 7日 于230教室。请阅读背页上教育局的信。</li>
+            <li>2019年12月21日和28日，2020年1月4日没有中文课，1月11日返校；<br>
+                家庭日周末：2020年2月15日, 没有中文课。
+            </li>
+            <li>春节游戏活动于2020年1月18日在咖啡厅举行，届时将有游戏/奖品/小食品，还有倍受同学和家长	们欢迎的龙舞/狮子舞以及表演等，让我们来共同欢庆鼠年的到来！请在上午10点来参加有趣的活动。</li>
+            <li>下学期的兴趣课于 2020年1月25日开始。</li>
+            <li>首都中文学校地址：Notre Dame High School, 710 Broadview Ave.<br>
+                星期六电话号码（首都中文学校）：613-293-2129</li>
           </ol>
           <p><small><strong>在这里代表首都中文学校，祝您和您的家人度过一个安全愉快的假期! </strong></small></p>
 
