--- a/registration.html
+++ b/registration.html
@@ -82,8 +82,7 @@
           <h2 class="text-center">Links | 链接</h2>
           <hr>
           <li><a href="documents/OCCS Pam Summer 2019.pdf">2019 Summer School Information</a><br></li>
-          <li><a href="documents/IL_Credit_RegForm_2018.pdf">2018-2019 Secondary (Credit Course) Registration
-              Form</a><br></li>
+          <li><a href="documents/IIL_RegForm_19-20.pdf">2019-2020 Registration Form</a><br></li>
           <li><a href="documents/Camp Registration form 19.pdf">2019 Summer Camp Registration Form</a></li>
         </div>
 
