--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,14 @@
                 <h4 class="cart-title text-center">Contact Info</h4>
                 <hr>
                 <p class="card-text"><strong>校长：</strong>苏耀华 (加拿大执证教师和加拿大校长资格证书持有人)</p>
+                <p class="card-text"><strong>电子邮件: </strong>vitus.so@ocsb.ca</p>
                 <p class="card-text"><strong>学校地址：</strong>710 BROADVIEW, OTTAWA</p>
-                <p class="card-text"><strong>电话：</strong>613-293-2129 (周六9:30-12:30 九月至六月</p>
+                <p class="card-text"><strong>电话：</strong>613-293-2129 (周六9:30-12:30 九月至六月)</p>
                 <hr>
                 <p class="card-text"><strong>Site Administrator: </strong>Vitus So, B.A., B.S.S. , M.A., B. Ed.,
                   Principal Qualification
                 </p>
+                <p class="card-text"><strong>Email: </strong>vitus.so@ocsb.ca</p>
                 <p class="card-text"><strong>Address: </strong>710 BROADVIEW, OTTAWA</p>
                 <p class="card-text"><strong>Phone: </strong>613-293-2129 Saturday (9:30am-12:30pm Sept. to June)</p>
               </div>
