--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         <div class="jumbotron">
           <h2 class="text-center">Links | 链接</h2>
           <hr>
-          <li><a href="documents/ElementaryRegistrationFall2020.pdf">Fall 2020: Elementary Registration</a></li>
-          <li><a href="documents/SecondaryRegistrationFall2020.pdf">Fall 2020: Secondary Registration</a></li>
+          <li><a href="http://conted.ocsb.ca/childrens-programs/elementary-il">Fall 2021: Elementary Registration</a></li>
+          <li><a href="http://conted.ocsb.ca/youth-programs/youth-il">Fall 2021: Secondary Registration</a></li>
           <li><a href="documents/OCCS Pam Summer 2019.pdf">2019 Summer School Information</a><br></li>
           <li><a href="documents/IIL_RegForm_19-20.pdf">2019-2020 Registration Form</a><br></li>
           <li><a href="documents/Camp Registration form 19.pdf">2019 Summer Camp Registration Form</a></li>
