--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@
         <div class="jumbotron">
           <h2 class="text-center">Links | 链接</h2>
           <hr>
+          <li><a href="http://conted.ocsb.ca/summer/elementary-summer-il">2022 Summer School Registration</a></li>
+          <li><a href="documents/SummerAfternoonCampInformation2022.pdf">2022 Summer afternoon camp information</a></li>
+          <li><a href="documents/AfternoonCampRegistrationForm2022.pdf">2022 Summer afternoon camp registration form</a></li>
+          <li><a href="documents/SampleScheduleFrom2019.pdf">Sample afternoon camp schedule from 2019</a></li>
           <li><a href="http://conted.ocsb.ca/childrens-programs/elementary-il">Fall 2021: Elementary Registration</a></li>
           <li><a href="http://conted.ocsb.ca/youth-programs/youth-il">Fall 2021: Secondary Registration</a></li>
-          <li><a href="documents/OCCS Pam Summer 2019.pdf">2019 Summer School Information</a><br></li>
           <li><a href="documents/IIL_RegForm_19-20.pdf">2019-2020 Registration Form</a><br></li>
-          <li><a href="documents/Camp Registration form 19.pdf">2019 Summer Camp Registration Form</a></li>
         </div>
-
       </div>
     </div>
   </div>
