Add changes from meeting

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                   Principal Qualification
                 </p>
                 <p class="card-text"><strong>Email: </strong>vitus.so@ocsb.ca</p>
-                <p class="card-text"><strong>Address: </strong>710 BROADVIEW, OTTAWA</p>
+                <p class="card-text"><strong>Address: </strong>710 BROADVIEW AVE, OTTAWA</p>
                 <p class="card-text"><strong>Phone: </strong>613-293-2129 Saturday (9:30am-12:30pm Sept. to June)</p>
               </div>
             </div>
