--- a/courses.html
+++ b/courses.html
@@ -84,15 +84,15 @@
               <h3 class="text-center">秋/冬季班</h3>
               <hr>
               <p><strong>时间：</strong>每年九月初至六月，周六上午9:30至中午12点。</p>
-              <p><strong>班级：</strong>国语）幼儿园低班到12级，成人班。</p>
-              <p><strong>下午学生课外兴趣班 (12:10-1:10pm)：</strong>歌舞，数学，算盘，中国象棋，围棋
-                武术, 电子琴，中国节编织，绘画。</p>
-              <p><strong>家长室内活动包括：</strong>篮球和羽毛球等。</p>
+              <p><strong>班级：</strong>普通话，廣東話：幼儿园低班到12级，成人班。</p>
+              <p><strong>下午学生课外兴趣班 (12:10-1:10pm)：</strong>演讲，声乐，舞蹈，数学，算盘，中国象棋，围棋，
+                武术，绘画，篮球和羽毛球。</p>
+              <p><strong>家长室内活动包括：</strong>篮球羽，毛球，舞蹈和瑜伽。</p>
             </div>
             <div class="col-lg-6">
               <h3 class="text-center mt-6">暑期班</h3>
               <hr>
-              <p><strong>时间：</strong>每年七月至八月，周一至周五(半日或全日)。</p>
+              <p><strong>时间：</strong>每年七月至八月，周一至周五 (半日或全日)。</p>
             </div>
           </div>
         </div>
@@ -104,19 +104,16 @@
               <h3 class="text-center">Fall/Winter Term</h3>
               <hr>
               <p><strong>Time: </strong>Beginning of September to June Saturdays, 9:30am to 12:00pm</p>
-              <p><strong>Class: </strong>(simplified Mandarin) A total of 14 levels from Junior Kindergarden to level
-                12,
-                Adult Class</p>
-              <p><strong>Parents recreational activities: </strong>Basketball, Badminton and so on.</p>
-              <p><strong>Afternoon extra activities: </strong>Singing and Dancing, Mathematics, Abacus, Chinese Chess,
-                Go,
-                Kungfu,
-                Electronic Keyboard, Chinese Knot Weaving and Drawing</p>
+              <p><strong>Class: </strong>(simplified Mandarin and Cantonese) A total of 14 levels from Junior Kindergarden to level
+                12, Adult Class</p>
+              <p><strong>Afternoon extra activities (12:10-1:10pm): </strong>Public Speaking, Singing, Dancing, Mathematics, Abacus, Chinese Chess,
+                Go, Kungfu, Drawing, Basketball, and Badminton.</p>
+              <p><strong>Parents recreational activities: </strong>Basketball, Badminton, Dance, and Yoga.</p>
             </div>
             <div class="col-lg-6">
               <h3 class="text-center mt-6">Summer School</h3>
               <hr>
-              <p><strong>Time: </strong>July to August Weekdays, Half or Full Day</p>
+              <p><strong>Time: </strong>July to August Weekdays, Half or Full Day.</p>
             </div>
           </div>
         </div>
