--- a/interest.html
+++ b/interest.html
@@ -82,17 +82,17 @@
               <h3 class="text-center">下午学生课外兴趣班</h3>
               <hr>
               <p><strong>时间: </strong>12:10-1:10pm</p>
-              <p><strong>课程: </strong>歌舞，数学，算盘，中国象棋，围棋, 篮球,
-                武术, 电子琴，中国节编织，绘画， 古筝，羽毛球。</p>
+              <p><strong>课程: </strong>演讲，声乐，舞蹈，数学，算盘，中国象棋，围棋，
+                武术，绘画，篮球和羽毛球。。</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="jumbotron">
               <h3 class="text-center">Afternoon extra activities:</h3>
               <hr>
-              <p>Singing and Dancing, Mathematics, Abacus, Chinese Chess, Go, Kungfu, Basketball Class, Electronic
-                Keyboard,
-                Chinese Knot Weaving, Drawing, Guzheng (Chinese Piano), and badminton.</p>
+              <p><strong>Time: </strong>12:10-1:10pm</p>
+              <p><strong>Activities: </strong>Public Speaking, Singing, Dancing, Mathematics, Abacus, Chinese Chess,
+                Go, Kungfu, Drawing, Basketball, and Badminton.</p>
             </div>
           </div>
         </div>
