Make navbar less ugly

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <!-- Top Bar -->
   <div class="container-fluid">
-    <nav class="navbar navbar-expand-sm flex-nowrap align-items-start shadow mb-2 rounded">
-      <img class="d-none d-md-block logo-img" src="img/OCCSLogo.png">
-      <div class="d-flex flex-column container">
+    <nav class="navbar navbar-expand-sm flex-nowrap align-items-center shadow mb-2 rounded justify-content-center">
+      <img class="d-none d-md-block logo-img img-fluid"  src="img/OCCSLogo.png">
+      <div class="d-flex flex-column align-items-center">
         <div class="d-sm-flex d-block flex-nowrap">
-          <p class="navbar-brand title" href="#">渥太华首都中文学校</p>
+          <p class="navbar-brand mr-5 ml-5 title" href="#">渥太华首都中文学校</p>
         </div>
         <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
